# ot-harjoitustyo

./: .gitignore  README.md
flashcard/: .coveragerc  .pylintrc  pyproject.toml  setting.xml  start.bat  tasks.py  vaatimusmaarittely.md
flashcard/dokumentaatio/: arkkitehtuuri.md  changelog.md  ohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
flashcard/kortit/: pakka1.xmlpack
flashcard/src/: __main__.py  flashcard.py  xmlreader.py
flashcard/src/data/: card.py  pack.py
flashcard/src/handlers/: filereader.py
flashcard/src/tests/: test_card.py  test_filereader.py  test_flashcard.py  test_pack.py
flashcard/src/tests/test_files/: corrupted.xmlpack  nocards.xmlpack  noname.xmlpack  onecard.xmlpack  working.xmlpack
flashcard/src/ui/: console.py  tkinter.py
flashcard/src/ui/interfaces/: card.py  open.py  pack.py  template.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli1.md  monopoli2.md  saatoa.txt  sekvenssikaavio1.md  sekvenssikaavio2.md
